frontend/kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.spcluster.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: cluster-ip-frontend
           port:
             number: 80
